@@ -18,6 +18,7 @@ import org.enhydra.jawe.base.panel.panels.XMLBasicPanel;
 import org.enhydra.jawe.base.panel.panels.XMLComboPanel;
 import org.enhydra.jawe.base.panel.panels.XMLPanel;
 import org.enhydra.jawe.shark.business.SharkConstants;
+import org.enhydra.jawe.shark.business.SharkUtils;
 import org.enhydra.jxpdl.XMLAttribute;
 import org.enhydra.jxpdl.XMLUtil;
 import org.enhydra.jxpdl.elements.Application;
